syntax = "proto3";

package pdfserver;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
}

service Files {
    rpc UploadFiles(stream UploadFilesRequest) returns (UploadFilesResponse);
}

message HelloRequest { string name = 1; }

message HelloReply { string message = 1; }

message File {
    // FileType image_format = 1;
    bytes content = 2;
}

message UploadFilesRequest {
    repeated File files = 1;
}

message UploadFilesResponse {}
    